--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@apollo/client": "^3.6.2",
     "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^16.5.0",
     "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-lazy-load-image-component": "^1.5.4",
